--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>">
+  <app-root><app-card-preferencias></app-card-preferencias></app-root>
+  
 </body>
 </html>
